--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,11 @@ spring.jpa.show-sql = true
 spring.datasource.validationQuery = SELECT 1
 spring.datasource.testWhileIdle = true
 spring.datasource.data=classpath:insertInit.sql
+
+
+spring.data.mongodb.authentication-database=appsstuff
+spring.data.mongodb.username=root
+spring.data.mongodb.password=root
+spring.data.mongodb.database=appsstuff
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
